--- a/AnApp/app.json
+++ b/AnApp/app.json
@@ -1,5 +1,5 @@
 {
-  "id": "70810f1e-3e2e-4d3b-9f3e-08dbf3f2c4e7",
+  "id": "70810f3e-3dcb-4f3a-9c7e-2e2b8f3c8b6a",
   "name": "AnApp",
   "publisher": "MiguelLuque",
   "version": "1.0.0.0",
@@ -11,6 +11,18 @@
   "url": "",
   "logo": "",
   "dependencies": [
+    {
+      "id":  "2fa733b0-39e4-4a5d-8687-61706995d5fc",
+      "name":  "Common",
+      "publisher":  "Freddy Kristiansen",
+      "version":  "1.0.0.0"
+    },
+    {
+      "id":  "6ca8b33e-2681-4bea-9269-4b8bbd852337",
+      "name":  "Licensing",
+      "publisher":  "Freddy Kristiansen",
+      "version":  "1.0.0.0"
+    }
   ],
   "screenshots": [],
   "platform": "1.0.0.0",
