--- a/AnApp/app.json
+++ b/AnApp/app.json
@@ -28,6 +28,12 @@
       "name": "BingMaps.AppSource",
       "publisher": "Freddy Kristiansen",
       "version": "1.0.0.0"
+    },
+    {
+      "id": "8c8eec06-bf1c-4ab6-b375-a0a6cf31a6bd",
+      "name": "App1",
+      "publisher": "Freddy Kristiansen",
+      "version": "1.0.0.0"
     }
   ],
   "screenshots": [],
