--- a/.github/AL-Go-Settings.json
+++ b/.github/AL-Go-Settings.json
@@ -1,5 +1,15 @@
 {
   "$schema": "https://raw.githubusercontent.com/microsoft/AL-Go-Actions/v7.3/.Modules/settings.schema.json",
   "type": "PTE",
-  "templateUrl": "https://github.com/microsoft/AL-Go-PTE@main"
+  "templateUrl": "https://github.com/microsoft/AL-Go-PTE@main",
+      "trustedNuGetFeeds": [
+    {
+      "url": "https://api.nuget.org/v3/index.json",
+      "patterns": "FreddyKristiansen.App1.8c8eec06-bf1c-4ab6-b375-a0a6cf31a6bd"
+    }
+  ],
+   "installApps": [
+    "https://github.com/AL-Go-Workshop/Snippets/raw/refs/heads/main/AnotherApp.app"
+  ],
+    "generateDependencyArtifact": true
 }
