--- a/AnApp/app.json
+++ b/AnApp/app.json
@@ -34,12 +34,12 @@
       "name": "App1",
       "publisher": "Freddy Kristiansen",
       "version": "1.0.0.0"
-    }
-  ],
-    "trustedNuGetFeeds": [
+    },
     {
-      "url": "https://api.nuget.org/v3/index.json",
-      "patterns": "FreddyKristiansen.App1.8c8eec06-bf1c-4ab6-b375-a0a6cf31a6bd"
+      "id": "3ac109ac-e684-4688-be0f-faf8d5c99238",
+      "name": "AnotherApp",
+      "publisher": "Freddy Kristiansen",
+      "version": "1.0.0.0"
     }
   ],
   "screenshots": [],
